--- a/html/test.html
+++ b/html/test.html
@@ -19,10 +19,11 @@
 		padding: 9px;
 	}
 	.thanh-ngang .menu li  {
-		display: block;
+		display: inline-block;
 		margin-left: -10px;
 		padding-left: 20px;
-		border-left: solid 1px red;
+		border-bottom: solid 1px red;
+		height: 40px;
 		
 	}
 	.thanh-ngang .menu li:before{
@@ -30,11 +31,11 @@
     bottom: auto;
    	content: "";
 	height: 8px;
-	left: 34px;
+	bottom: 34px;
 	right: auto;
 	width: 10px;
 	position: absolute;
-	margin-top: 15px;
+	margin-top: 7px;
 	}
 </style>
 <body>
